Adding more details to layout :D

--- a/html-uppgift/index.html
+++ b/html-uppgift/index.html
@@ -1,19 +1,60 @@
 <!DOCTYPE html>
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Uppgift nr 2, html</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <nav> 
-            <header> </header>
-        </nav>
+<html class="no-js">
 
-        
-        <script src="" async defer></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Uppgift nr 2, html</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="app.css">
+</head>
+
+<body>
+    <div class="indexHtml">
+
+        <header>
+            <div class="wrap header">
+                <img src="/logo.png" alt="logotype">
+            </div>
+        </header>
+        <nav>
+            <div class="wrap nav">
+                <ul>
+                    <li>Tidrapportering</li>
+                    <li>Historik</li>
+                    <li>Projektet</li>
+                    <li>Aktiviteter</li>
+                    <li>Personal</li>
+                </ul>
+            </div>
+        </nav>
+        <section class="bgColor">
+
+            <section class="wrap">
+                <div class="title">Tidrapportering</div>
+                <div class="line"></div>
+            </section>
+
+            <section class="flex wrap">
+                <div class="sectionLeft"></div>
+                <div class="sectionRight"></div>
+            </section>
+
+            <section>
+                <div class="wrap sectionBig"></div>
+            </section>
+
+            <footer class="wrap">
+                <div class="footer">
+                  Hjälp
+                </div>
+            </footer>
+            
+        </section>
+    </div>
+
+</body>
+
 </html>
