--- a/html-uppgift/index.html
+++ b/html-uppgift/index.html
@@ -15,18 +15,20 @@
     <div class="indexHtml">
 
         <header>
+            <div class="profileMenu"><span class="triangle"></span> Harriet Henry <span class="img"> <img src="./profile.jpg"> </span></div>
             <div class="wrap header">
-                <img src="/logo.png" alt="logotype">
+                <img src="./logo.png" alt="logotype">
             </div>
         </header>
+
         <nav>
             <div class="wrap nav">
                 <ul>
-                    <li>Tidrapportering</li>
-                    <li>Historik</li>
-                    <li>Projektet</li>
-                    <li>Aktiviteter</li>
-                    <li>Personal</li>
+                    <li class="active"><img class="icons" src="./icons/clock.svg">Tidrapportering <div class="dot"></div></li>
+                    <li><img class="icons" src="./icons/time-left.svg">Historik</li>
+                    <li><img class="icons" src="./icons/project.svg">Projektet</li>
+                    <li><img class="icons" src="./icons/menu.svg">Aktiviteter</li>
+                    <li><img class="icons" src="./icons/user.svg">Personal</li>
                 </ul>
             </div>
         </nav>
@@ -48,10 +50,10 @@
 
             <footer class="wrap">
                 <div class="footer">
-                  Hjälp
+                    Hjälp
                 </div>
             </footer>
-            
+
         </section>
     </div>
 
