--- a/html-uppgift/index.html
+++ b/html-uppgift/index.html
@@ -30,23 +30,27 @@
                             <img class="icons" src="./icons/clock.svg">Tidrapportering <div class="dot"></div>
                         </li>
                     </a>
+
                     <a href="#">
                         <li class="navItem">
-                            <img class="icons" src="./icons/time-left.svg">Historik</li>
+                            <img class="icons" src="./icons/time-left.svg">Historik
+                        </li>
+                    </a>
+
+                    <a href="#">
+                        <li class="navItem">
+                            <img class="icons" src="./icons/project.svg">Projektet 
+                        </li>
                     </a>
                     <a href="#">
                         <li class="navItem">
-
-                            <img class="icons" src="./icons/project.svg">Projektet </li>
-                    </a>
-                    <a href="#">
-                        <li class="navItem">
-
                             <img class="icons" src="./icons/menu.svg">Aktiviteter
+                        </li>
+                    </a>
                             <a href="#">
                         <li class="navItem">
-
-                            <img class="icons" src="./icons/user.svg">Persona </li>
+                            <img class="icons" src="./icons/user.svg">Persona 
+                        </li>
                     </a>
                 </ul>
             </div>
